--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "prop-types": "^15.5.10",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "react-native-vector-icons": "github:hampustagerud/react-native-vector-icons#fa5-ios-fix",
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
